<resources>
    <string name="app_name">farmers information manager</string>
    <string name="app_photos">photos</string>
    <string name="app_pictures">pictures</string>
    <string name="app_foldername">nyax</string>
    <string name="select_image">select image</string>
    <string name="select_database_to_import">select database to import</string>
    <string name="action_search">search</string>
    <string name="imagecontentDescription">image content description</string>
    <string name="appbar_scrolling_view_behavior">scroll</string>
    <string name="font_family">verdana</string>
    <string name="notification_action_name">tap for more detailed view of the message</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_item_string">first item</string>
    <string name="second_item_string">second item</string>
    <string name="tab_text_1">tab text 1</string>
    <string name="tab_text_2">tab text 2</string>
    <string name="android_studio_android_com">android.studio@android.com</string>
    <string name="android_studio">Android Studio</string>
    <string name="check_network_connectivity">check network connectivity</string>
    <string name="exportdbsuccessToast">crop variety</string>
    <string name="exportdbErrorToast">crop variety</string>
    <string name="take_photo">photo</string>
    <string name="connected">connected</string>
    <string name="notInRange">notInRange</string>
    <string name="network_wifi_wpa_Key">ntharene123</string>
    <string name="network_wifi_bssid">scylla</string>
    <string name="network_static_ip">ntharene123</string>
    <string name="network_static_netmask">scylla</string>
    <string name="network_static_gateway">ntharene123</string>
    <string name="network_static_dns_1">scylla</string>
    <string name="network_wifi_essid">scylla</string>
    <string name="wifi_install_error_message">Unknown error while calling WiFiManager</string>
    <string name="wifi_key">wifi_key</string>
    <string name="wifi_title">wifi™</string>
    <string name="wifi_summary">Enable the the app to use wireless fidelity(wifi)™ feature.</string>
    <string name="bluetooth_key">bluetooth_key</string>
    <string name="bluetooth_title">bluetooth™</string>
    <string name="bluetooth_summary">Enable the the app to use bluetooth™ low energy application interface(api) feature.</string>
    <string name="finger_print_key">finger_print_key</string>
    <string name="finger_print_title">finger print™</string>
    <string name="finger_print_summary">Enable the the app to use finger print™ feature.</string>
    <string name="camera_key">camera_key</string>
    <string name="camera_title">camera™</string>
    <string name="camera_summary">Enable the the app to use camera™ feature.</string>
	<string name="game_key">game_key</string>
    <string name="game_title">game™</string>
    <string name="game_summary">Enable the the app to use game™ feature.</string>
    <string name="boot_event_key">boot_event</string>
    <string name="boot_event_summary">Enable the app to listen for boot event i.e. the app will be launched automatically when device boot.</string>
    <string name="boot_event_title">launch app automaticatically</string>
    <string name="server_ip_address_default_value">192.168.0.20</string>
    <string name="server_ip_address_dialog_title">Enter the ip address (eg. 192.168.0.20)</string>
    <string name="server_ip_address_key">server_ip_address_key</string>
    <string name="server_ip_address_summary">Enter the ip address where the app will fetch updates from server.</string>
    <string name="server_ip_address_title">server ip address</string>
    <string name="server_port_number_default_value">90</string>
    <string name="server_port_number_dialog_title">Enter the port number (eg. 90)</string>
    <string name="server_port_number_key">server_port_number_key</string>
    <string name="server_port_number_summary">Enter the port number where the app will fetch updates from server.</string>
    <string name="server_port_number_title">server port number</string>
    <string name="fetch_update_key">fetch_update_key</string>
    <string name="fetch_update_summary">fetch datastore updates online, else use local network.</string>
    <string name="fetch_update_title">fetch datastore updates online</string>
    <string name="txtnameinputmask">ritwa</string>
    <string name="txtWifiInfo">scanning for wifi access points...</string>
    <string name="txtbluetoothinfo">scanning for nearby bluetooth low energy devices...</string>
    <string name="txtdatabasenamehint">database name</string>
	<string name="txtversionnamehint">version name</string>
	<string name="txtversioncodehint">version code</string>
	<string name="txtinstalltimehint">install time</string>
	<string name="txtlastupdatetimehint">last update time</string>
    <string name="lbltitle">farmers information manager</string>
    <string name="lblname">ritwa</string>
    <string name="lblerrormsg"></string>
    <string name="lblmsg"></string>
    <string name="lblserveripaddress">ip address</string>
    <string name="lblserverport">port</string>
    <string name="lblsysipaddress"></string>
    <string name="lblsplashprogressinfo">farmers information manager is starting...</string>
    <string name="lblrecordcount"></string>
    <string name="lbltimer"></string>
    <string name="empty_view"></string>
    <string name="lbldatabasename">database name</string>
	<string name="lblversionname">version name</string>
	<string name="lblversioncode">version code</string>
	<string name="lblinstalltime">install time</string>
	<string name="lbllastupdatetime">last update time</string>
	<string name="lblentityname">entity</string>
    <string name="btnsearch">search</string>
    <string name="btnaccept">accept</string>
    <string name="btncheckbluetooth">bluetooth</string>
    <string name="btncheckwifi">wifi</string>
    <string name="btnfilewaka">create file</string>
    <string name="btnlistdirs">list directories</string>
    <string name="btnexpota">export</string>
    <string name="btnchetharwimbo">media player</string>
    <string name="btnopenbrowser">open browser</string>
    <string name="btnchoosemailintent">open email</string>
    <string name="btnopendiala">open dialer</string>
    <string name="btnopensharedprefs">shared preference</string>
    <string name="btntakephoto">camera</string>
    <string name="btntake_photo_camera2">camera2 Api</string>
    <string name="btnturnwifion">enable wifi</string>
    <string name="btnScan">scan wifi</string>
    <string name="btnconnecttowifi">connect to wifi access point</string>
    <string name="btncreatedatabase">create database</string>
    <string name="btnimportdatabase">import database</string>
    <string name="btnexportdatabase">export database</string>
    <string name="btnscanbluetooth">scan bluetooth</string>
    <string name="btnenablebluetooth">enable bluetooth</string>
    <string name="btnmakebluetoothdiscoverable">make bluetooth discoverable</string>
    <string name="btndiscovernearbydevices">discover nearby devices</string>
    <string name="btnconnect_to_bluetooth_device">connect to device</string>
    <string name="btnsend_data_to_bluetooth_divice">send data</string>
    <string name="btnreceive_data_to_bluetooth_divice">receive data</string>
    <string name="btnplayaudio">play audio</string>
    <string name="btnplayvideo">play video</string>
    <string name="btnsyncdatabase">sync database</string>
    <string name="btnreadfingerprint">fingerprint</string>
    <string name="btntake_photo">take photo</string>
    <string name="btnbrowse_image">browse image</string>
    <string name="btnturnwifioff">disable wifi</string>
    <string name="btnEnumerate_Network_Interface_Addresses">Enumerate Network Interface Addresses</string>
	<string name="btnvibrate">vibrate</string>
	<string name="btngame">game</string>
    <string name="audio_activity">media player</string>
    <string name="ActivityOne_label">Activity One</string>
    <string name="ActivityTwo_label">Activity Two</string>
    <string name="ActivityThree_label">Activity Three</string>
    <string name="activity_fragment_one">activity fragment one</string>
    <string name="list_crops_activity">crops</string>
    <string name="searchutilsactivity">search</string>
    <string name="about_activity_label">about</string>
    <string name="bluetooth_activity">bluetooth</string>
    <string name="preference_activity_label">shared preference</string>
    <string name="camera_activity">camera</string>
	<string name="camera2_activity">camera2</string>
    <string name="fragment_three">fragment three</string>
    <string name="fragment_two">fragment two</string>
    <string name="fragment_one">fragment one</string>
    <string name="wifi_activity">wifi</string>
    <string name="msgutilsactivity">messages</string>
    <string name="helpactivity">help</string>
    <string name="database_utils_activity">utils</string>
    <string name="register_activity">register</string>
    <string name="login_activity">login</string>
    <string name="sync_datastore_activity">sync datastore</string>
    <string name="fingerprint_activity">finger print</string>
	<string name="game_activity">game</string>
	<string name="delete_all_activity">delete all</string>
    <string name="search_hint">search</string>
    <string name="search_hint_text">enter search term</string>
    <string name="txtsearchhint">custom hint</string>
    <string name="txtserveripaddresshint">192.168.38.1</string>
    <string name="txtserverporthint">90</string>
    <string name="txtcropnamehint">name</string>
    <string name="txtcropidhint">id</string>
    <string name="txtcropvarietyhint">variety</string>
    <string name="txtcropstatushint">status</string>
    <string name="txtcropdiseasenamehint">name</string>
    <string name="txtcropdiseasecategoryhint">category</string>
    <string name="txtcropdiseasestatushint">status</string>
    <string name="txtmanufacturernamehint">name</string>
    <string name="txtmanufacturerstatushint">status</string>
    <string name="txtpestinsecticidenamehint">name</string>
    <string name="txtpestinsecticidecategoryhint">category</string>
    <string name="txtpestinsecticidestatushint">status</string>
    <string name="txtsettingstatushint">status</string>
    <string name="txtcropdiseaseidhint">id</string>
    <string name="txtcropvarietystatushint">status</string>
    <string name="txtmanufactureridhint">id</string>
    <string name="txtpestinsecticideidhint">id</string>
    <string name="txtcropvarietyidhint">id</string>
    <string name="txtcropvarietynamehint">name</string>
    <string name="txtmanufacturercategoryhint">status</string>
    <string name="txtpestinsecticidevarietyhint">name</string>
    <string name="txtsettingidhint">id</string>
    <string name="txtsettingvarietyhint">name</string>
    <string name="txtpestinsecticidediseasepesthint">disease/pest</string>
    <string name="txtpestinsecticidemanufacturerhint">manufacturer</string>
    <string name="txtcropdiseasedtoidhint">id</string>
    <string name="txtcropdiseasepestnamehint">disease/pest</string>
    <string name="txtsearchpestinsecticidenamehint">pesticide/insecticide</string>
    <string name="txtsearchpestinsecticidemanufacturerhint">manufacturer</string>
    <string name="txtcategoryidhint">id</string>
    <string name="txtcategorynamehint">name</string>
    <string name="txtcategorystatushint">status</string>
    <string name="home_menu">home</string>
    <string name="about_menu">about</string>
    <string name="help_menu">help</string>
    <string name="signout_menu">sign out</string>
    <string name="database_utils_activity_Menu">utils</string>
    <string name="create_setting_activity">create</string>
    <string name="create_category_activity">create</string>
	<string name="delete_all_menu">delete all</string>
</resources>