<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
	
	<item
        android:id="@+id/databaseutilsactivityMenu"
        android:enabled="true"
        android:icon="@drawable/ic_tab_1"
        android:title="@string/database_utils_activity_Menu"
        app:showAsAction="never" />
    <item
        android:id="@+id/helpMenu"
        android:enabled="true"
        android:icon="@drawable/ic_tab_1"
        android:title="@string/help_menu"
        app:showAsAction="never" />
    <item
        android:id="@+id/aboutMenu"
        android:enabled="true"
        android:icon="@drawable/ic_tab_1"
        android:title="@string/about_menu"
        app:showAsAction="never" />
    <item
        android:id="@+id/signOutMenu"
        android:enabled="true"
        android:icon="@drawable/ic_tab_1"
        android:title="@string/signout_menu"
        app:showAsAction="never" /> 
    
</menu>




