<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/create_setting_activity"
        android:enabled="true"
        android:icon="@drawable/add"
        android:title="@string/create_setting_activity"
        app:showAsAction="ifRoom" />
	<item
        android:id="@+id/home_menu"
        android:enabled="true"
        android:icon="@drawable/ic_tab_1"
        android:title="@string/home_menu"
        app:showAsAction="never" />
</menu>




