<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
		android:visibility="gone"
        app:showAsAction="ifRoom" /> -->
    <item
        android:id="@+id/create_category_activity"
        android:enabled="true"
        android:icon="@drawable/add"
        android:title="@string/create_category_activity"
        app:showAsAction="ifRoom" />
	<item
        android:id="@+id/delete_all_menu"
        android:enabled="true"
        android:icon="@drawable/delete"
        android:title="@string/delete_all_menu"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/home_menu"
        android:enabled="true"
        android:icon="@drawable/home"
        android:title="@string/home_menu"
        app:showAsAction="never" />
</menu>




